Bug 441199 - Plugins menu is shown even when no plugins were loaded
Summary: Plugins menu is shown even when no plugins were loaded
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: 21.08.0
Platform: Manjaro Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
: 441820 443205 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-08-19 21:52 UTC by pveax
Modified: 2021-10-01 19:52 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 21.08.2
Sentry Crash Report:


Attachments
screenshot (19.17 KB, image/png)
2021-08-19 21:52 UTC, pveax
Details

Note You need to log in before you can comment on or make changes to this bug.
Description pveax 2021-08-19 21:52:13 UTC
Created attachment 140856 [details]
screenshot

SUMMARY
Plugins menu is empty (has no menu to show)

STEPS TO REPRODUCE
1. Open Konsole
2. Click the `Pligins` menu item
3. 

OBSERVED RESULT
No drop-down menu appears.

EXPECTED RESULT
Drop-down sub-menu appears.

SOFTWARE/OS VERSIONS
```
Operating System: Manjaro Linux
KDE Plasma Version: 5.22.4
KDE Frameworks Version: 5.85.0
Qt Version: 5.15.2
Kernel Version: 5.14.0-1-MANJARO (64-bit)
Graphics Platform: X11
```

ADDITIONAL INFORMATION
Global theme used: Breeze Dark.

Confirmed by 2 other Manjaro users on their OS copy (@Mina and @ddns):
https://forum.manjaro.org/t/stable-update-2021-08-17-kernels-kde-software-nvidia-firefox-thunderbird-mate/78666/57
in that initial post their `konsole` version are unknown, please check the mentioned Manjaro thread above a bit later.

If in that konsole window to run the `journalctl -xf`, then no new entries appears on click and mouse over events of the `Plugins` menu item btn.

Neighbor sub-menus of `Bookmarks` and `Settings` has their drop-down menu (works well as expected).


Thanks!
Comment 1 Ahmad Samir 2021-08-31 20:24:52 UTC
*** Bug 441820 has been marked as a duplicate of this bug. ***
Comment 2 Bug Janitor Service 2021-08-31 20:27:05 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/konsole/-/merge_requests/468
Comment 3 Ahmad Samir 2021-09-03 18:51:51 UTC
Git commit 8ee53cc56e47e7d9fb4f2623e21f68492e309305 by Ahmad Samir.
Committed on 03/09/2021 at 18:24.
Pushed by hindenburg into branch 'master'.

Hide the Plugins menu if no plugins were loaded

Apparently KXmlGUI sets the action object name to the "name=" tag from the
ui.rc XML file.
FIXED-IN: 21.12

M  +13   -1    src/Application.cpp

https://invent.kde.org/utilities/konsole/commit/8ee53cc56e47e7d9fb4f2623e21f68492e309305
Comment 4 Kurt Hindenburg 2021-09-06 15:39:35 UTC
Git commit c988702ffb92042e40c38c49438b58b8e2d97530 by Kurt Hindenburg, on behalf of Ahmad Samir.
Committed on 06/09/2021 at 15:39.
Pushed by hindenburg into branch 'release/21.08'.

Hide the Plugins menu if no plugins were loaded

Apparently KXmlGUI sets the action object name to the "name=" tag from the
ui.rc XML file.
FIXED-IN: 21.08.2
(cherry picked from commit 8ee53cc56e47e7d9fb4f2623e21f68492e309305)

M  +13   -1    src/Application.cpp

https://invent.kde.org/utilities/konsole/commit/c988702ffb92042e40c38c49438b58b8e2d97530
Comment 5 Antonio Rojas 2021-10-01 19:52:37 UTC
*** Bug 443205 has been marked as a duplicate of this bug. ***