Hide the Plugins menu if no plugins were loaded

Apparently KXmlGUI sets the action object name to the "name=" tag from the
ui.rc XML file.

BUG: 441199
FIXED-IN: 21.12